--- a/TheWPFCoveringWindow/MainWindow.xaml
+++ b/TheWPFCoveringWindow/MainWindow.xaml
@@ -1,12 +1,8 @@
-﻿<Window x:Class="TheWPFCoveringWindow.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TheWPFCoveringWindow"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
-</Window>
+﻿    <Window x:Class="TheWPFCoveringWindow.MainWindow"
+            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+            WindowStyle="None" WindowState="Maximized"
+            AllowsTransparency="True" Background="Transparent"
+            Topmost="True">
+        <Button Content="Test" Width="200" Height="100" />
+    </Window>
